added lorem ipsum

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 	<header>
 		<h1>GIT REPO</h1>
 	</header>
+	<main>
+		<h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur neque molestias quia obcaecati necessitatibus architecto quod porro veritatis sunt pariatur. Facere architecto laborum recusandae, vitae aliquam, temporibus dolor neque perferendis!</p>
+			<p>Expedita, veniam ullam nesciunt quas ab consequatur illo hic mollitia at ratione facilis earum beatae suscipit quam labore impedit laborum iusto rerum fugiat eius assumenda! Minus odio labore magni velit.</p>
+			<p>Odit animi quae mollitia rerum nihil reiciendis! Accusamus accusantium sed commodi, maiores laboriosam officia, quis voluptatum, sapiente ad provident aperiam. Unde accusamus, sequi, nemo expedita necessitatibus vitae maiores alias asperiores.</p>
+		</h2>
+	</main>
 </body>
 </html>
